# ripple

./: Cargo.toml  README.md
fluid/: Cargo.toml  README.md
fluid/src/: lib.rs  main.rs  smoke.rs
fluid/src/gpu/: backend.rs  context.rs  field.rs  marching_squares.wgsl  mod.rs  render.wgsl  smoke.wgsl  smoke_gpu.rs  sph.wgsl  sph_backend.rs
ripple/: Cargo.toml  README.md
ripple/src/: flip.rs  lib.rs  sim.rs
ripple/src/gpu/: field.wgsl  flip.wgsl  flip_gpu.rs  metaball_blob.wgsl  metaball_composite.wgsl  mod.rs
src/: main.rs
src/gpu/: context.rs  cpu_backends.rs  flip.wgsl  flip_gpu.rs  flip_render.wgsl  marching_squares_fill.wgsl  particles.rs  render.rs  sim.rs  smoke_render.wgsl  sph.wgsl  sph_backend.rs  ui.rs
