[package]
name = "ripple"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.34.3"
egui-wgpu = "0.34.3"
egui-winit = "0.34.3"
glam = "0.27"
pollster = "0.4.0"
rayon = "1"
wgpu = "29.0.3"
winit = "0.30.13"

# Debug builds of the solvers are painfully slow at opt-level 0.
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
